# aws-python-automation

./: .env.example  README.md  init.py  pyproject.toml
common/: auth.py
lambda/copy_to_extension_folder/: README.md  lambda_function.py
quotes/inspire_quotes/: README.md  main.py  my_args.py
s3/host_static_site/: README.md  main.py  my_args.py
s3/host_static_site/site/: index.html
s3/host_website_source/: README.md  main.py  my_args.py
s3/manage_file_versions/: README.md  main.py  my_args.py
s3/prune_file_versions/: README.md  main.py  my_args.py
s3/upload_files_by_extension/: README.md  main.py  my_args.py
